--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "aos": "^2.3.4",
         "core-js": "^3.6.5",
+        "moment": "^2.29.1",
         "vue": "^2.6.11",
         "vue-agile": "^1.1.3",
         "vue-router": "^3.2.0",
